--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,7 @@
     }
     
     .day-header {
-      background: linear-gradient(45deg, #667eea, #764ba2);
+      background: linear-gradient(45deg, #002fff, #ffaa00);
       color: white;
       padding: 15px;
       display: flex;
